--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ img {
 }
 
 .music-info {
-  background-color: #87ff62;
+  background-color: red;
   border-radius: 15px 15px 15px 15px;
   position: absolute;
   top: 310px;
