--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@font-face {
+  @font-face {
 	font-family: aminofont;
 	src: url(BebasNeue-Regular.ttf);
 	font-weight: bold;
@@ -15,15 +15,18 @@ body {
   font-family: 'aminofont';
   margin: 0;
 }
+
 div {
 font-family: aminofont;
 color: white;
 }
+
 h4 {
 font-family: aminofont;
 color: black;
 text-align: center;
 }
+
 img {
     display: block;
     margin-left: auto;
@@ -31,12 +34,16 @@ img {
     max-width: 100%;
     height: auto;
 }
+
 .music-container {
   background-color: #000000;
-  display: table;
+  display: flex;
+  flex-direction: column;
   position: relative;
   align-content: center;
-  margin: 30px 0 100px 0;
+  align-items: center;
+  justify-content: center;
+  margin: 5px 0 100px 0;
   z-index: 10;
 }
 
@@ -44,6 +51,7 @@ img {
   position: center;
   justify-content: center;
   width: 200px;
+  margin: 10px;
 }
 
 .img-container img {
@@ -91,6 +99,7 @@ img {
 }
 
 .action-btn.action-btn-big {
+
   color: black;
   font-size: 60px;
   border-radius: 12%;
@@ -105,8 +114,8 @@ img {
   background-color: #6afb53;
   border-radius: 15px 15px 15px 15px;
   position: absolute;
-  top: 310px;
-  left: 0;
+  top: 340px;
+
   width: calc(100% - 100px);
   padding: 10px 20px 10px 20px;
   opacity: 0;
