--- a/style.css
+++ b/style.css
@@ -1,13 +1,6 @@
-  @font-face {
-	font-family: aminofont;
-	src: url(BebasNeue-Regular.ttf);
-	font-weight: bold;
-}
-
 body {
   background-color: black;
-  	text-align: center;
-  
+  text-align: center;  
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,65 +9,73 @@ body {
   margin: 0;
 }
 
-div {
-font-family: aminofont;
-color: white;
+@font-face {
+  font-family: aminofont;
+  src: url(BebasNeue-Regular.ttf);
+  font-weight: bold;
 }
 
+div {
+  font-family: aminofont;
+  color: white;
+}
+
+
 h4 {
-font-family: aminofont;
-color: black;
-text-align: center;
+  font-family: aminofont;
+  color: black;
+  text-align: center;
 }
 
 img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 100%;
-    height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 .music-container {
+  height: 330px;
   background-color: #000000;
   display: flex;
   flex-direction: column;
   position: relative;
-  align-content: center;
   align-items: center;
-  justify-content: center;
-  margin: 5px 0 100px 0;
-  z-index: 10;
+  z-index: 9;
 }
 
 .img-container {
   position: center;
   justify-content: center;
-  width: 200px;
-  margin: 10px;
+  width: 170px;
+  opacity: 0;
+  transform: translateY(150%);
+  transition: transform 1s ease-in-out, opacity 1s ease-in-out;
+  z-index: 0;
+}
+.music-container.play .img-container {
+  display: flex;
+  opacity: 1;
+  transform: translateY(-5%);
 }
 
 .img-container img {
   border-radius: 50%;
   object-fit: cover;
-  height: 200px;
+  height: 170px;
   width: inherit;
   position: relative;
-
   animation: rotate 5s linear infinite;
-
   animation-play-state: paused;
 }
-
 .music-container.play .img-container img {
   animation-play-state: running;
 }
-
 @keyframes rotate {
   from {
     transform: rotate(0deg);
   }
-
   to {
     transform: rotate(360deg);
   }
@@ -88,45 +89,58 @@ img {
 }
 
 .action-btn {
+  opacity: 0;
   background-color: #3dff00;
   border: 0;
   color: black;
   font-size: 20px;
   cursor: pointer;
   padding: 8px 10px 8px 10px;
-  margin: 0 20px;
+  margin: 0 15px;
   border-radius: 20%;
+  transform: translateY(100%);
+  transition: transform 1s ease-in-out, opacity 1s ease-in-out;
+  z-index: 0;
+}
+.music-container.play .action-btn {
+  opacity: 1;
+  transition: opacity 2s ease-in-out;
+  transform: translateY(-100%);
+}
+.action-btn.play {
+  position: relative;
+  bottom: 45px;
 }
 
 .action-btn.action-btn-big {
-
+  opacity: 1;
   color: black;
-  font-size: 60px;
+  font-size: 120px;
   border-radius: 12%;
   padding: 18px 25px 18px 25px;
+  transform: translateY(-60%);
 }
-
-.action-btn:focus {
-  outline: 0;
+.music-container.play .action-btn.action-btn-big {
+  transition: transform 1s ease-in-out;
+  transform: scale(0.5);
+  z-index: 0;
 }
 
 .music-info {
   background-color: #6afb53;
   border-radius: 15px 15px 15px 15px;
   position: absolute;
-  top: 340px;
-
+  top: 285px;
   width: calc(100% - 100px);
   padding: 10px 20px 10px 20px;
   opacity: 0;
-  transform: translateY(-300%);
-  transition: transform 0.3s ease-in, opacity 0.3s ease-in;
-  z-index: 0;
+  transform: translateY(-450%);
+  transition: transform 1s ease-in, opacity 1s ease-in;
+  z-index: 2;
 }
-
 .music-container.play .music-info {
   opacity: 1;
-  transform: translateY(0%);
+  transform: translateY(-35%);
 }
 
 .music-info h4 {
@@ -148,4 +162,8 @@ img {
   height: 100%;
   width: 0%;
   transition: width 0.1s linear;
+}
+
+.insta {
+  z-index: 10;
 }
