--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 @font-face {
   font-family: aminofont;
-  src: url(BebasNeue-Regular.ttf);
+  src: url(OstrichSans-Heavy.otf);
   font-weight: bold;
 }
 
